objects/SupplierKPI__c.object
<CustomObject>
    <description>Supplier KPIs</description>
    <fields>
        <fullName>Category__c</fullName>
        <formula>SIPMKPI__r.Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI_Description__c</fullName>
        <formula>SIPMKPI__r.KPI_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KPI Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI_Target__c</fullName>
        <formula>SIPMKPI__r.KPI_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KPI Target</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualifier__c</fullName>
        <formula>TEXT( SIPMKPI__r.Qualifier__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIPMKPI__c</fullName>
        <description>SIPM KPI</description>
        <inlineHelpText>SIPM KPI</inlineHelpText>
        <label>SIPM KPI</label>
        <referenceTo>SPIM_KPI__c</referenceTo>
        <relationshipLabel>SupplierKPis</relationshipLabel>
        <relationshipName>SupplierKPis</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <description>Supplier</description>
        <inlineHelpText>Supplier</inlineHelpText>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>SupplierKPis</relationshipLabel>
        <relationshipName>SupplierKPis</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <formula>TEXT( SIPMKPI__r.UOM__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UOM</label>
        <type>Text</type>
    </fields>
    <label>SupplierKPI</label>
    <nameField>
        <displayFormat>SKPI-{000000}</displayFormat>
        <label>SuplierKPINp</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SupplierKPis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>